--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,27 @@
       <version>2.9.6</version>
     </dependency>
 
+    <!-- Kieker监听依赖包 -->
+    <dependency>
+      <groupId>aopalliance</groupId>
+      <artifactId>aopalliance</artifactId>
+      <version>1.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.2</version>
+      <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>net.kieker-monitoring</groupId>
+      <artifactId>kieker</artifactId>
+      <version>1.13</version>
+      <scope>runtime</scope>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>Shopping</finalName>
