--- a/src/main/resources/properties/database.properties
+++ b/src/main/resources/properties/database.properties
@@ -1,8 +1,8 @@
-#ÕâÀïÊÇÊý¾Ý¿âÇý¶¯£¬Èç¹ûÏë»»ÓÃSQLServer»òÕßÆäËû£¬ÐèÒª¸ü¸Äpom.xml jarÏà¹ØÒÔÀ´==ÒÀÀµÒÔ¼°ÕâÀïµÄÇý¶¯
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ë»»ï¿½ï¿½SQLServerï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Òªï¿½ï¿½ï¿½ï¿½pom.xml jarï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½==ï¿½ï¿½ï¿½ï¿½ï¿½Ô¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 driverClassName=com.mysql.jdbc.Driver
-#Êý¾Ý¿âÁ¬½ÓµØÖ·£¬²»Í¬Êý¾Ý¿â²»Ò»Ñù£¬Èô»»Êý¾Ý¿âÇë×ÔÐÐËÑË÷Ìæ´ú·½Ê½
+#ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½Óµï¿½Ö·ï¿½ï¿½ï¿½ï¿½Í¬ï¿½ï¿½ï¿½Ý¿â²»Ò»ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê½
 url=jdbc:mysql://localhost:3306/shopping
-#ÄãµÄÊý¾Ý¿âµÄÓÃ»§Ãû
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½Ã»ï¿½ï¿½ï¿½
 userName=root
-#ÄãµÄÊý¾Ý¿âµÄÃÜÂë£¬Ò»¶¨Òª¸Ä
-password=yourpassword
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½ë£¬Ò»ï¿½ï¿½Òªï¿½ï¿½
+password=123456
