--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -71,4 +71,19 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <!-- Kieker 监控 -->
+  <filter>
+    <filter-name>sessionAndTraceRegistrationFilter</filter-name>
+    <filter-class>kieker.monitoring.probe.servlet.SessionAndTraceRegistrationFilter</filter-class>
+      <init-param>
+        <param-name>logFilterExecution</param-name>
+        <param-value>true</param-value>
+        </init-param>
+  </filter >
+
+  <filter-mapping>
+    <filter-name>sessionAndTraceRegistrationFilter</filter-name>
+    <url-pattern>/∗</url-pattern>
+  </filter-mapping>
+
 </web-app>
