--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -20,7 +20,7 @@ log4j.appender.file.layout.ConversionPattern=%d&&%t&&%-5p&&%c&&%m%n
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 
-log4j.rootLogger=warn, stdout, file
+log4j.rootLogger=debug, stdout, file
 
 #log4j.logger.org.hibernate=info
 #log4j.logger.org.hibernate=debug
@@ -29,8 +29,8 @@ log4j.rootLogger=warn, stdout, file
 #log4j.logger.org.hibernate.hql.ast.AST=debug
 
 ### log just the SQL
-log4j.logger.org.springframework.orm.hibernate4.HibernateTransactionManager=debug
-log4j.logger.org.hibernate.SQL=debug
+#log4j.logger.org.springframework.orm.hibernate4.HibernateTransactionManager=debug
+#log4j.logger.org.hibernate.SQL=debug
 
 ### log JDBC bind parameters ###
 #log4j.logger.org.hibernate.type=info
