update source of img and fix some bug

--- a/src/main/resources/properties/database.properties
+++ b/src/main/resources/properties/database.properties
@@ -1,8 +1,8 @@
-#ÕâÀïÊÇÊý¾Ý¿âÇý¶¯£¬Èç¹ûÏë»»ÓÃSQLServer»òÕßÆäËû£¬ÐèÒª¸ü¸Äpom.xml jarÏà¹ØÒÔÀ´==ÒÀÀµÒÔ¼°ÕâÀïµÄÇý¶¯
+# é©±åŠ¨åç§°ï¼ˆæ–°ç‰ˆæœ¬é©±åŠ¨åç§°ä¸å¤ªä¸€æ ·ï¼Œæ³¨æ„åŒºåˆ«ç‰ˆæœ¬ï¼‰
 driverClassName=com.mysql.jdbc.Driver
-#Êý¾Ý¿âÁ¬½ÓµØÖ·£¬²»Í¬Êý¾Ý¿â²»Ò»Ñù£¬Èô»»Êý¾Ý¿âÇë×ÔÐÐËÑË÷Ìæ´ú·½Ê½
+# mysqlåœ°å€
 url=jdbc:mysql://localhost:3306/shopping
-#ÄãµÄÊý¾Ý¿âµÄÓÃ»§Ãû
+# mysqlç”¨æˆ·å
 userName=root
-#ÄãµÄÊý¾Ý¿âµÄÃÜÂë£¬Ò»¶¨Òª¸Ä
+# mysqlå¯†ç 
 password=yourpassword
