init database and add docker-compose support

--- a/src/main/resources/properties/database.properties
+++ b/src/main/resources/properties/database.properties
@@ -1,8 +1,8 @@
 # 驱动名称（新版本驱动名称不太一样，注意区别版本）
 driverClassName=com.mysql.jdbc.Driver
 # mysql地址
-url=jdbc:mysql://localhost:3306/shopping
+url=jdbc:mysql://mysql:3306/shopping
 # mysql用户名
 userName=root
 # mysql密码
-password=yourpassword
+password=root
